# spells

./: .gitignore  Cargo.toml  README.md  app.js  index.html  main.css
.github/workflows/: main.yml  release.yml
resources/: spells.json
resources/font-maker/: Base.sfd  create_font.py  fontforge_import.py  list.txt  run_fontforge.sh
src/: character.rs  click_button.rs  error.rs  fetch.rs  hotkey.rs  hotmouse.rs  icon.rs  main.rs  new.rs  search.rs  settings.rs  slots_widget.rs  style.rs  tabs.rs  theme.rs  update.rs  utils.rs
src/spells/: data.rs  mod.rs  spell.rs  static_arc.rs
src/widgets/: mod.rs
