[package]
name = "spells"
version = "1.5.1"
authors = ["Andrew-Schwartz <andrewschwartz59@gmail.com>"]
edition = "2021"

[dependencies.iced]
# master for focusing ability
#git = "https://github.com/iced-rs/iced"
version = "0.9"
default-features = false
# for release
features = ["glow", "palette"]
# for debug
#features = ["glow", "debug"]

[dependencies.iced_aw]
#version = "0.5"
# using my own version so that I can make just the character tabs closeable
git = "https://github.com/Andrew-Schwartz/iced_aw"
#branch = "main"
#path = "../iced_aw"
default-features = false
features = ["tabs", "icons"]

[dependencies]
iced_native = "0.10.3"
iced_style = "0.8.0"
iced_core = { version = "0.9.0", features = ["palette"] }
iced_futures = { version = "0.6.0", features = ["tokio"] }
palette = "0.7.1"
serde = { version = "1.0.120", features = ["derive", "rc"] }
serde_json = "1.0.61"
#anyhow = "1.0.38"
thiserror = "1.0.32"
itertools = "0.10.0"
once_cell = "1.5.2"
levenshtein = "1.0.4"
dirs = "5.0.1"
image = "0.24.3"
self_update = "0.37.0"
semver = "1.0.4"
futures = "0.3.19"
reqwest = { version = "0.11.8", features = ["rustls-tls"] }
bytes = "1.1.0"
tempfile = "3.2.0"
tokio = { version = "1.15.0", features = ["time"] }
num-traits = "0.2.15"

#tokio = { version = "1.0.2", features = ["full"] }
#futures = "0.3.12"
#reqwest = "0.11.0"
#select = "0.6.0-alpha.1"

[profile.dev]
opt-level = 2

[profile.release]
#strip = true
#lto = "fat"
